Refs #25503 - fix breadcrumbs alignment

--- a/webpack/assets/javascripts/react_app/components/BreadcrumbBar/components/Breadcrumbs.scss
+++ b/webpack/assets/javascripts/react_app/components/BreadcrumbBar/components/Breadcrumbs.scss
@@ -2,3 +2,11 @@
   display: inline-flex;
   max-width: 50%;
 }
+
+.breadcrumbs-pf-title li.breadcrumb-item-with-icon span {
+  vertical-align: middle;
+
+  img {
+    align-self: center;
+  }
+}
